Add parser tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ add_library(
 )
 target_compile_features(yaml-static PUBLIC cxx_generic_lambdas)
 target_compile_options(yaml-static PUBLIC ${cxx_defs})
+target_compile_features(yaml-static PUBLIC cxx_std_17)
 target_include_directories(yaml-static PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(yaml-static PUBLIC boost)
 target_link_libraries(yaml-static ${link_flags})
@@ -87,6 +88,7 @@ add_library(
 )
 target_compile_features(yaml PUBLIC cxx_generic_lambdas)
 target_compile_options(yaml PUBLIC ${cxx_defs})
+target_compile_features(yaml PUBLIC cxx_std_17)
 target_include_directories(yaml PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(yaml PUBLIC boost)
 target_link_libraries(yaml ${link_flags})
