Fix copy pasta in test/CMakeLists.txt.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,9 +21,10 @@ add_executable(
     compile_tests_main.cpp
     compile_seq_attribute.cpp
     compile_or_attribute.cpp
+    compile_or_seq_attribute.cpp
 )
 target_link_libraries(compile_tests yaml)
-add_definitions(compile_tests -ftemplate-backtrace-limit=0)
+add_definitions(-ftemplate-backtrace-limit=0)
 
 
 ##################################################
