Add a test of the new paramerized rule system; fix an error.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,7 +40,9 @@ endmacro()
 #endforeach()
 
 add_test_executable(parser_rule)
+add_test_executable(parser_rule_with_params)
 add_test_executable(parser_action)
+add_test_executable(parser_action_with_params)
 add_test_executable(parser_symbol_table)
 
 ##################################################
