Add test of new lazy param handling; fix numerous errors.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -39,6 +39,7 @@ endmacro()
 #    add_test_executable(${test_name})
 #endforeach()
 
+add_test_executable(parser_lazy_params)
 add_test_executable(parser_rule)
 add_test_executable(parser_rule_with_params)
 add_test_executable(parser_action)
