--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,9 @@ target_compile_features(yaml-static PUBLIC cxx_std_17)
 target_include_directories(yaml-static PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(yaml-static PUBLIC boost)
 target_link_libraries(yaml-static ${link_flags})
+if (HAVE_CMCSTL2)
+    target_link_libraries(yaml-static INTERFACE stl2)
+endif()
 if (USE_ASAN OR USE_UBSAN)
     target_compile_options(yaml-static PUBLIC ${link_flags})
 endif()
@@ -92,8 +95,11 @@ target_compile_features(yaml PUBLIC cxx_std_17)
 target_include_directories(yaml PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_link_libraries(yaml PUBLIC boost)
 target_link_libraries(yaml ${link_flags})
+if (HAVE_CMCSTL2)
+    target_link_libraries(yaml INTERFACE stl2)
+endif()
 if (USE_ASAN OR USE_UBSAN)
-    target_compile_options(yam PUBLIC ${link_flags})
+    target_compile_options(yaml PUBLIC ${link_flags})
 endif()
 if (clang_on_linux)
     target_compile_options(yaml PUBLIC -stdlib=libstdc++)
