Add an API test for the parser API, using the new standalone CMake parser library; fix errors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,15 @@ elseif (USE_UBSAN)
 endif()
 
 
+##################################################
+# Parser sub-library
+##################################################
+add_library(parser INTERFACE)
+target_include_directories(parser INTERFACE ${CMAKE_SOURCE_DIR}/include)
+target_compile_features(parser INTERFACE cxx_std_17)
+
+
+
 # TODO: Turn this on if a static lib is desired; there's no need for it now.
 if (false)
 ##################################################
