Replace a TODO in test/CMakeLists.txt with an indication of the "fix" for the affected tests.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,7 +37,8 @@ macro(add_test_executable name)
 endmacro()
 
 # Disabling these.  They served their purpose, but take too long to build and
-# run. TODO: Seems like these might need work, actually!
+# run.  They also require a patched version of Boost.Hana, as of Boost 1.74:
+# https://github.com/boostorg/hana/issues/470.
 #file(GLOB generated_parser_tests generated_parsers_???.cpp)
 #foreach(test ${generated_parser_tests})
 #    get_filename_component(test_name ${test} NAME_WE)
