--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -26,3 +26,4 @@ add_sample(trivial)
 add_sample(trivial_skipper)
 add_sample(semantic_actions)
 add_sample(roman_numerals)
+add_sample(self_filling_symbol_table)
