Add a compile test that covers all the standalone parsers, and fix errors related to deducing uses of the Unicode vs. non-Unicode parsing code paths.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ add_test(NAME parser_api COMMAND parser_api ---gtest_catch_exceptions=1)
 add_executable(
     compile_tests
     compile_tests_main.cpp
+    compile_attribute.cpp
     compile_seq_attribute.cpp
     compile_or_attribute.cpp
 )
