--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -53,3 +53,4 @@ add_test_executable(parser_rule_with_params)
 add_test_executable(parser_action)
 add_test_executable(parser_action_with_params)
 add_test_executable(parser_symbol_table)
+add_test_executable(tracing)
