Add a short example using a rule before we get into the weeds.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -25,5 +25,6 @@ add_sample(hello)
 add_sample(trivial)
 add_sample(trivial_skipper)
 add_sample(semantic_actions)
+add_sample(rule_intro)
 add_sample(roman_numerals)
 add_sample(self_filling_symbol_table)
