Add an empty-input test that covers every parser.
Fixes #1.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -54,3 +54,4 @@ add_test_executable(parser_action)
 add_test_executable(parser_action_with_params)
 add_test_executable(parser_symbol_table)
 add_test_executable(tracing)
+add_test_executable(parse_empty)
