Convert from Boost.Hana to Hana lite, part 5: Make some small adjustments to the tests to get them building when Hana is not used; disable building the examples when Boost.Hana is not in use, so that they can keep using the much nicer hana::tuple::operator[] instead of parser::get().
This completes the changes to make Hana optional.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,11 +60,11 @@ if (BUILD_WITHOUT_BOOST)
   add_definitions(-DBOOST_PARSER_STANDALONE)
 endif()
 
-add_definitions(-ftemplate-backtrace-limit=0) # TODO
-
 
 ##################################################
 # Subdirectories
 ##################################################
 add_subdirectory(test)
-add_subdirectory(example)
+if (NOT BUILD_WITHOUT_HANA)
+  add_subdirectory(example)
+endif()
